--- a/bg.html
+++ b/bg.html
@@ -7,7 +7,7 @@
 <style>
   body {
     background-color: black;
-    color: green;
+    color: rgb(0, 140, 255);
     font-family: "Courier New", monospace;
     font-size: 16px;
     line-height: 1.5;
@@ -20,8 +20,8 @@
 
   .console {
     padding: 20px;
-    border: 2px solid green;
-    box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
+    border: 2px solid rgb(0, 140, 255);
+    box-shadow: 0 0 10px rgb(0, 140, 255);
     background-color: black;
     width: 80%;
     max-width: 600px;
@@ -30,7 +30,7 @@
   }
 
   .output {
-    color: lime;
+    color: rgb(0, 140, 255);
     animation: typing 4s steps(40) 1s forwards, blink-caret 0.75s infinite, text-scale 1s 1s infinite alternate;
     white-space: nowrap;
     overflow: hidden;
@@ -38,7 +38,7 @@
   }
 
   .prompt {
-    color: green;
+    color: rgb(0, 140, 255);
   }
 
   @keyframes typing {
@@ -55,7 +55,7 @@
       border-right-color: transparent;
     }
     50% {
-      border-right-color: lime;
+      border-right-color: rgb(0, 140, 255);
     }
   }
 
